[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Assets/Enemies/Arvore.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]

[node name="Arvore" type="Area2D"]
position = Vector2( 475, 169 )
collision_layer = 16
script = ExtResource( 2 )

[node name="Alcance" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="AtaqueTimer" type="Timer" parent="."]
[connection signal="area_exited" from="." to="." method="_on_Arvore_area_exited"]
[connection signal="timeout" from="AtaqueTimer" to="." method="_on_AtaqueTimer_timeout"]
